--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 -Add more analysis tools to the toolset
     -regression analysis of waveforms
     -tolerance analysis of components
+-Add to PyPi index
 -Add self designing tools?
     -BJT amp designer?
     -framework for making your own template design?
